# enigma2-openpli

./: configure.ac
data/: keymap.xml
lib/driver/: vfd.cpp
lib/python/Components/: About.py  HdmiCec.py  Network.py  NimManager.py  SystemInfo.py  UsageConfig.py
lib/python/Plugins/Extensions/: Makefile.am
lib/python/Plugins/Extensions/SparkVFD/: Makefile.am
lib/python/Plugins/Extensions/spark7162VFD/: plugin.py
lib/python/Plugins/SystemPlugins/: Makefile.am
lib/python/Plugins/SystemPlugins/HdmiCEC/: plugin.py
lib/python/Screens/: ChannelSelection.py  Hotkey.py  InfoBar.py  InfoBarGenerics.py  Wizard.py
po/: cs.po  ru.po
tools/: enigma2.sh.in
